Update Argocd deployment to use annotation tracking mode

--- a/argocd/helm-values.yaml
+++ b/argocd/helm-values.yaml
@@ -5,6 +5,7 @@ server:
   - --insecure
   config:
     accounts.backstage: apiKey
+    application.resourceTrackingMethod: annotation+label
   rbacConfig:
     policy.csv: |
       g, backstage, role:admin
