--- a/grafana-operator/loki-datasource.yaml
+++ b/grafana-operator/loki-datasource.yaml
@@ -8,7 +8,7 @@ spec:
   datasources:
   - name: loki
     type: loki
-    uid: P982945308D3682D1
+    uid: loki
     url: http://loki.loki:3100
     isDefault: false
     jsonData:
@@ -16,4 +16,4 @@ spec:
       - name: trace_id
         matcherRegex: 'trace_id\":\"(\w+)\"'
         url: '$${__value.raw}'
-        datasourceUid: P8D6546721A1D106C
+        datasourceUid: tempo
