--- a/grafana-operator/prometheus-datasource.yaml
+++ b/grafana-operator/prometheus-datasource.yaml
@@ -8,6 +8,6 @@ spec:
   datasources:
   - name: prometheus
     type: prometheus
-    uid: P1809F7CD0C75ACF3
+    uid: prometheus
     url: http://prometheus-server.prometheus
     isDefault: true
