--- a/backstage/app.yaml
+++ b/backstage/app.yaml
@@ -147,6 +147,7 @@ metadata:
   name: backstage
   namespace: backstage
 spec:
+  ingressClassName: traefik
   rules:
   - host: backstage.BASE_DOMAIN_VALUE
     http:
