Send traces from traefik to tempo

--- a/traefik/helm-values.yaml
+++ b/traefik/helm-values.yaml
@@ -5,6 +5,9 @@ logs:
     level: INFO
 service:
   type: NodePort
+tracing:
+  jaeger:
+    localAgentHostPort: tempo.tempo:6831
 ports:
   web:
     nodePort: 30000
