--- a/grafana/helm-values.yaml
+++ b/grafana/helm-values.yaml
@@ -7,6 +7,10 @@ sidecar:
     enabled: true
     searchNamespace: grafana
     initDatasources: true
+  dashboards:
+    enabled: true
+    labelValue: "1"
+    searchNamespace: ALL
 grafana.ini:
   users:
     auto_assign_org_role: Viewer
