Create observability ns for all observability apps

--- a/grafana/helm-values.yaml
+++ b/grafana/helm-values.yaml
@@ -6,7 +6,7 @@ ingress:
 sidecar:
   datasources:
     enabled: true
-    searchNamespace: grafana
+    searchNamespace: observability
     initDatasources: true
   dashboards:
     enabled: true
