--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -26,7 +26,7 @@ RUN apt-get update \
       $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
       tee /etc/apt/sources.list.d/docker.list > /dev/null \
     && apt-get update \
-    && apt-get install -y --no-install-recommends docker-ce-cli \
+    && apt-get install -y --no-install-recommends docker-ce-cli uuid-runtime \
     && groupadd docker \
     && usermod -aG docker coder \
     && apt-get clean \
