--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,26 +1,26 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
-  disableDefaultCNI: true
+  disableDefaultCNI: false
 nodes:
-- role: control-plane
-  image: kindest/node:v1.30.0
-  kubeadmConfigPatches:
-  - |
-    kind: InitConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-labels: "ingress-ready=true"
-  extraPortMappings:
-  - containerPort: 80
-    hostPort: 80
-    protocol: TCP
-  - containerPort: 443
-    hostPort: 443
-    protocol: TCP
-- role: worker
-  image: kindest/node:v1.30.0
-- role: worker
-  image: kindest/node:v1.30.0
-- role: worker
-  image: kindest/node:v1.30.0
+  - role: control-plane
+    image: kindest/node:v1.33.2
+    kubeadmConfigPatches:
+      - |
+        kind: InitConfiguration
+        nodeRegistration:
+          kubeletExtraArgs:
+            node-labels: "ingress-ready=true"
+    extraPortMappings:
+      - containerPort: 80
+        hostPort: 80
+        protocol: TCP
+      - containerPort: 443
+        hostPort: 443
+        protocol: TCP
+  - role: worker
+    image: kindest/node:v1.33.2
+  - role: worker
+    image: kindest/node:v1.33.2
+  - role: worker
+    image: kindest/node:v1.33.2
