--- a/argocd/helm-values.yaml
+++ b/argocd/helm-values.yaml
@@ -2,7 +2,10 @@ server:
   ingress:
     enabled: true
   extraArgs:
-  - --insecure
+    - --insecure
+dex:
+  image:
+    repository: dexidp/dex
 controller:
   args:
     appResyncPeriod: 30
@@ -16,3 +19,4 @@ configs:
   secret:
     argocdServerAdminPassword: "$2a$10$uFpv5.xxyayOJP0gjG1W4O3dwk9aUv/0pL./uyR3R8uwrvCDAzgPy"
     argocdServerAdminPasswordMtime: "2022-06-02T18:44:00Z"
+
